Added contact section

--- a/index.html
+++ b/index.html
@@ -155,13 +155,29 @@
     <!-- Contact -->
     <div id="contact" class="contact-container">
         <div class="connect">
-
+            <h1>Connect with me</h1>
+            <div class="socials">
+                <a href="https://github.com/nimishjn" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://www.linkedin.com/in/nimishjn/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                <a href="https://twitter.com/nimishjain_" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+                <a href="mailto:nimishjain100701@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email me</a>
+                <a href="https://links.nimish-jain.com/" target="_blank"><i class="fas fa-link"></i> Other links</a>
+            </div>
         </div>
         <div class="say-hi">
-            
+            <h1>Say Hi</h1>
+            <form class="gform" name="say-hi-form">
+                <input id="Name" name="Name" type="text" placeholder="Name *" required>
+                <input id="email" name="Email" type="email" placeholder="Email *" required>
+                <input id="message" name="Message" type="text" placeholder="Message *" required>
+                <button type="submit" active><i class="fas fa-paper-plane"></i> Send</button>
+            </form>
         </div>
     </div>
-        
+    <footer>
+        <h3><a href="https://github.com/nimishjn/portfolio">Fork this website on GitHub</a></h3>
+        <h3>© Nimish Jain</h3>
+    </footer>
 </body>
 <script src="./main.js"></script>
 </html>
