--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     </div>
     <ul class='mobile-navbar' id="mobile-navbar">
         <button onclick="closeNavbar()" active><i class="fas fa-times-circle"></i></button>
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#skills">TOOLS AND SKILLS</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
-        <li><a href="#research">RESEARCH</a></li>
-        <li><a href="#contact">CONTACT ME</a></li>
+        <a href="#home"><li>HOME</li></a>
+        <a href="#about"><li>ABOUT</li></a>
+        <a href="#skills"><li>TOOLS AND SKILLS</li></a>
+        <a href="#projects"><li>PROJECTS</li></a>
+        <a href="#research"><li>RESEARCH</li></a>
+        <a href="#contact"><li>CONTACT ME</li></a>
     </ul>
 
     <!-- Home -->
@@ -70,9 +70,9 @@
             <p>Hey, this is Nimish Jain, second year undergrad at Vellore
                 Institute of Technology, Vellore pursuing B. Tech Information Technology.
                 I am currently learning react.js and will move to Node.js for backend. 
-                I am a Data Analytics Researcher in Data Preprocessing domain.
+                I am also a Data Analytics Researcher in Data Preprocessing domain.
                 I have a conference publication in the IEEE organization and another 
-                conference paper accepted at CAMS 2021, Germany. Do check out my research 
+                conference paper accepted at CAMS 2021, Germany. <br> Do check out my projects, research 
                 profiles and publications. 
             </p>
             <div class="about-buttons">
