feat: New research paper, fix: Minor UI fix

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
         <div class="about-main">
           <h1>About</h1>
           <p>
-            Hey, this is Nimish Jain, second year undergrad at Vellore Institute
-            of Technology, Vellore pursuing B. Tech Information Technology. I am
-            currently learning react.js and will move to Node.js for backend. I
-            am also a Data Analytics Researcher in Data Preprocessing domain. I
-            have a conference publication in the IEEE organization and an
-            accepted conference and Journal Publication which will get published
-            by the end of this year.<br />
+            Hey, this is Nimish, a second year B. Tech undergrad in Information
+            Technology at Vellore Institute of Technology, Vellore. I am a
+            Frontend developer with an aim to become a MERN stack developer by
+            the end of this year. I am also a Data Analytics researcher in the
+            data preprocessing domain under the mentorship of Dr. B. R. Prusty.
+            I have conference publications in the IEEE Organisation and Elsevier,
+            and an accepted Journal Manuscript which will get
+            published by the end of this year.<br /><br />
             Do check out my projects, research profiles and publications.
           </p>
           <div class="about-buttons">
