--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta property="og:title" content="Nimish Jain's Portfilio" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://static.nimish-jain.com/Nimish%20Jain/Nimish_Jain_bw_lq.jpeg"
+    />
+    <meta property="og:type" content="Portfilio">
+    <meta
+      property="og:description"
+      content="Hey, this is Nimish, a second-year B. Tech undergrad in Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain under the mentorship of Dr. B. R. Prusty. I have conference publications in the IEEE and Elsevier and an accepted Book Chapter."
+    />
+    <meta name="author" content="Nimish Jain">
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -112,15 +125,14 @@
         <div class="about-main">
           <h1>About</h1>
           <p>
-            Hey, this is Nimish, a second year B. Tech undergrad in Information
+            Hey, this is Nimish, a second-year B. Tech undergrad in Information
             Technology at Vellore Institute of Technology, Vellore. I am a
-            Frontend developer with an aim to become a MERN stack developer by
-            the end of this year. I am also a Data Analytics researcher in the
-            data preprocessing domain under the mentorship of Dr. B. R. Prusty.
-            I have conference publications in the IEEE Organisation and Elsevier,
-            and an accepted Journal Manuscript which will get
-            published by the end of this year.<br /><br />
-            Do check out my projects, research profiles and publications.
+            Full-stack developer and love to play with complex designs. I am
+            also a Data Analytics researcher in the data preprocessing domain
+            under the mentorship of Dr. B. R. Prusty. I have conference
+            publications in the IEEE and Elsevier and an accepted Book
+            Chapter.<br /><br />
+            Do check out my projects, research profiles, and publications.
           </p>
           <div class="about-buttons">
             <button onclick="window.location = '#projects';" active>
@@ -262,8 +274,8 @@
       <footer>
         <h3>
           <a href="https://github.com/nimishjn/portfolio"
-            >Fork this website on GitHub</a
-          >
+            >Fork this website on GitHub <i class="fas fa-external-link-alt"></i
+          ></a>
         </h3>
         <h3>© Nimish Jain</h3>
       </footer>
