--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="Nimish Jain's Portfilio" />
+    <!-- Primary Meta Tags -->
+    <title>Nimish Jain</title>
+    <meta name="title" content="Nimish Jain" />
     <meta
-      name="image"
-      property="og:image"
-      content="https://static.nimish-jain.com/Nimish%20Jain/Nimish_Jain_bw_lq.jpeg"
+      name="description"
+      content="Hey, this is Nimish, a second-year B. Tech undergrad studying Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain."
     />
-    <meta property="og:type" content="Portfilio">
+    <meta property="image" content="./assets/banner.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.nimish-jain.com/" />
+    <meta property="og:title" content="Nimish Jain" />
     <meta
       property="og:description"
-      content="Hey, this is Nimish, a second-year B. Tech undergrad in Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain under the mentorship of Dr. B. R. Prusty. I have conference publications in the IEEE and Elsevier and an accepted Book Chapter."
+      content="Hey, this is Nimish, a second-year B. Tech undergrad studying Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain."
     />
-    <meta name="author" content="Nimish Jain">
+    <meta property="og:image" content="./assets/banner.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.nimish-jain.com/" />
+    <meta property="twitter:title" content="Nimish Jain" />
+    <meta
+      property="twitter:description"
+      content="Hey, this is Nimish, a second-year B. Tech undergrad studying Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain."
+    />
+    <meta property="twitter:image" content="./assets/banner.png" />
 
     <link
       rel="apple-touch-icon"
@@ -42,8 +58,6 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./style.css" />
-
-    <title>Nimish Jain</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -87,21 +101,31 @@
       <div id="home" class="home-container">
         <div class="home-text">
           <h1>Hi, I’m Nimish</h1>
-          <h2>An aspiring fullstack developer</h2>
+          <h2>An MERN Stack Developer</h2>
           <h2>Data Analytics Researcher</h2>
           <div class="home-socials">
-            <a href="https://github.com/nimishjn" target="_blank"
+            <a
+              href="https://github.com/nimishjn"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-github"></i
             ></a>
-            <a href="https://www.linkedin.com/in/nimishjn/" target="_blank"
+            <a
+              href="https://www.linkedin.com/in/nimishjn/"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-linkedin-in"></i
             ></a>
-            <a href="https://twitter.com/nimishjain_" target="_blank"
+            <a
+              href="https://twitter.com/nimishjain_"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-twitter"></i
             ></a>
             <a
-              href="https://www.hackerrank.com/nimishjain100701"
+              href="https://www.hackerrank.com/nimishjain"
               target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-hackerrank"></i
             ></a>
           </div>
@@ -125,10 +149,10 @@
         <div class="about-main">
           <h1>About</h1>
           <p>
-            Hey, this is Nimish, a second-year B. Tech undergrad in Information
-            Technology at Vellore Institute of Technology, Vellore. I am a
-            Full-stack developer and love to play with complex designs. I am
-            also a Data Analytics researcher in the data preprocessing domain
+            Hey, I am Nimish, a second-year B. Tech undergrad studying
+            Information Technology at Vellore Institute of Technology, Vellore.
+            I am a Full-stack developer and love to play with complex designs. I
+            am also a Data Analytics researcher in the data preprocessing domain
             under the mentorship of Dr. B. R. Prusty. I have conference
             publications in the IEEE and Elsevier and an accepted Book
             Chapter.<br /><br />
@@ -178,8 +202,8 @@
                     arcu a risus pulvinar fringilla sit amet id lacus. Integer 
                     eleifend mi in libero eleifend, facilisis pharetra sem dapibus. </p>
                 <div class="project-buttons">
-                    <a id="deploy-button" href="./projects/sample" target="_blank"><i class="fas fa-eye"></i> View</a>
-                    <a href="https://github.com/nimishjn" id="code-button" target="_blank"><i class="fas fa-file-code"></i> Code</a>
+                    <a id="deploy-button" href="./projects/sample" target="_blank" rel="noreferrer"><i class="fas fa-eye"></i> View</a>
+                    <a href="https://github.com/nimishjn" id="code-button" target="_blank" rel="noreferrer"><i class="fas fa-file-code"></i> Code</a>
                 </div>
             </div> 
             -->
@@ -192,7 +216,7 @@
           <h1>Research Profiles</h1>
           <div id="all-research-profiles">
             <!-- Research profiles template
-                <a rel="noreferrer noopener" href="https://resume.nimish-jain.com" target="_blank">
+                <a rel="noreferrer noopener" href="https://resume.nimish-jain.com" target="_blank" rel="noreferrer">
                     <div class="research-card">
                         <i class="fas fa-file-alt"></i>
                         <p>Resume</p>
@@ -206,7 +230,7 @@
           <h1>Research Papers</h1>
           <div id="all-research-papers">
             <!-- Research paper template
-                <a rel="noreferrer noopener" href="https://resume.nimish-jain.com" target="_blank">
+                <a rel="noreferrer noopener" href="https://resume.nimish-jain.com" target="_blank" rel="noreferrer">
                     <div class="research-card">
                         <i class="fas fa-file-alt"></i>
                         <p>Resume</p>
@@ -223,19 +247,34 @@
         <div class="connect">
           <h1>Connect with me</h1>
           <div class="socials">
-            <a href="https://github.com/nimishjn" target="_blank"
+            <a
+              href="https://github.com/nimishjn"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-github"></i> GitHub</a
             >
-            <a href="https://www.linkedin.com/in/nimishjn/" target="_blank"
+            <a
+              href="https://www.linkedin.com/in/nimishjn/"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-linkedin-in"></i> LinkedIn</a
             >
-            <a href="https://twitter.com/nimishjain_" target="_blank"
+            <a
+              href="https://twitter.com/nimishjain_"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fab fa-twitter"></i> Twitter</a
             >
-            <a href="mailto:nimishjain100701@gmail.com" target="_blank"
+            <a
+              href="mailto:nimishjain100701@gmail.com"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fas fa-envelope"></i> Email me</a
             >
-            <a href="https://links.nimish-jain.com/" target="_blank"
+            <a
+              href="https://links.nimish-jain.com/"
+              target="_blank"
+              rel="noreferrer"
               ><i class="fas fa-link"></i> Other links</a
             >
           </div>
