fix: meta image tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       name="description"
       content="Hey, this is Nimish, a second-year B. Tech undergrad studying Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain."
     />
-    <meta property="image" content="%PUBLIC_URL%/assets/banner.png" />
+    <meta property="image" content="/banner.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
       property="og:description"
       content="Hey, this is Nimish, a second-year B. Tech undergrad studying Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/assets/banner.png" />
+    <meta property="og:image" content="/banner.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -32,7 +32,7 @@
       property="twitter:description"
       content="Hey, this is Nimish, a second-year B. Tech undergrad studying Information Technology at Vellore Institute of Technology, Vellore. I am a Full-stack developer and love to play with complex designs. I am also a Data Analytics researcher in the data preprocessing domain."
     />
-    <meta property="twitter:image" content="%PUBLIC_URL%/assets/banner.png" />
+    <meta property="twitter:image" content="/banner.png" />
 
     <link
       rel="apple-touch-icon"
