--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div id="home" class="home-container">
         <div class="home-text">
           <h1>Hi, I’m Nimish</h1>
-          <h2>An MERN Stack Developer</h2>
+          <h2>A Full-Stack Developer</h2>
           <h2>Data Analytics Researcher</h2>
           <div class="home-socials">
             <a
