feat: New projects and skills

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           alt="Skills vector art"
         />
         <div class="skills-main">
-          <h1>Tools and skills</h1>
+          <h1>Tools and Skills</h1>
           <div id="all-skills">
             <!-- skill-card template
                 <div class="skill-card">
