Feat: New Paper and New project

--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
             I am a Full-stack developer and love to play with complex designs. I
             am also a Data Analytics researcher in the data preprocessing domain
             under the mentorship of Dr. B. R. Prusty. I have conference
-            publications in the IEEE and Elsevier and an accepted Book
-            Chapter.<br /><br />
+            publications in the IEEE Xplore, Elsevier and Springer.<br /><br />
             Do check out my projects, research profiles, and publications.
           </p>
           <div class="about-buttons">
